<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondoDialog"
    tools:context=".Configuracion">


    <TextView
        android:id="@+id/txt_tituloConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt_tituloConfiguracion"
        android:textColor="@color/color_titulo"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_colorRosaOscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@color/color_fondo2"
        android:onClick="ajustarColor"
        android:text="@string/btn_rosa"
        app:backgroundTint="@color/color_fondo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_colorGris"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloConfiguracion" />

    <Button
        android:id="@+id/btn_colorGris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@color/color_fondo"
        android:onClick="ajustarColor"
        android:text="@string/btn_gris"
        app:backgroundTint="@color/color_fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_colorRosaOscuro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloConfiguracion" />
</androidx.constraintlayout.widget.ConstraintLayout>