<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_cerdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_cerdo_128" />

    <TextView
        android:id="@+id/txt_tituloInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/color_titulo"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cerdo" />

    <Button
        android:id="@+id/btn_jugar"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="irJugar"
        android:padding="16dp"
        android:text="@string/btn_jugar"
        android:textColor="@color/color_botones_texto"
        android:textSize="18sp"
        app:backgroundTint="@color/color_botones"
        app:cornerRadius="0dp"
        app:elevation="0dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloInicio" />

    <Button
        android:id="@+id/btn_configuracion"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="irConfiguracion"
        android:padding="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_config"
        android:textColor="@color/color_botones_texto"
        android:textSize="18sp"
        app:backgroundTint="@color/color_botones"
        app:cornerRadius="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_jugar" />

    <Button
        android:id="@+id/btn_salir"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="salir"
        android:padding="16dp"
        android:scrollbarDefaultDelayBeforeFade="400"
        android:scrollbarFadeDuration="250"
        android:scrollbarSize="4dp"
        android:text="@string/btn_salir"
        android:textColor="@color/color_botones_texto"
        android:textSize="18sp"
        app:backgroundTint="@color/color_botones"
        app:cornerRadius="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_configuracion" />

    <Button
        android:id="@+id/btn_informacion"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="irInformacion"
        android:padding="16dp"
        android:scrollbarDefaultDelayBeforeFade="0"
        android:text="@string/btn_info"
        android:textColor="@color/color_botones_texto"
        android:textSize="18sp"
        app:backgroundTint="@color/color_botones"
        app:cornerRadius="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salir" />


</androidx.constraintlayout.widget.ConstraintLayout>